--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,36 +13,62 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/buttonNotifications"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:text="Notifications"
-                android:background="@drawable/button_bg"
-                android:layout_margin="5dp"
-                android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/buttonNotes"
+                <Button
+                    android:id="@+id/buttonNotifications"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:text="Notifications"
+                    android:background="@drawable/button_bg"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:id="@+id/buttonNotes"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:text="Notes (With Room DB)"
+                    android:background="@drawable/button_bg"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="120dp"
-                android:text="Notes (With Room DB)"
-                android:background="@drawable/button_bg"
-                android:layout_margin="5dp"
-                android:layout_weight="1"/>
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/buttonBluetooth"
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:text="Bluetooth"
+                    android:background="@drawable/button_bg"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"/>
+
+                <Button
+                    android:layout_width="match_parent"
+                    android:layout_height="120dp"
+                    android:text="Fingerprint auth"
+                    android:background="@drawable/button_bg"
+                    android:layout_margin="5dp"
+                    android:layout_weight="1"/>
+
+            </LinearLayout>
 
         </LinearLayout>
-
-
     </androidx.core.widget.NestedScrollView>
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
