--- a/app/src/main/res/layout/activity_bluetooth.xml
+++ b/app/src/main/res/layout/activity_bluetooth.xml
@@ -33,18 +33,30 @@
         app:layout_constraintTop_toBottomOf="@id/appBarLayout"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="20dp"
+        android:layout_margin="10dp"
         android:text="Search For Bluetooth Devices"
         android:textAllCaps="false"/>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/pairedDevicesReceyclerView"
+    <Button
+        android:id="@+id/btPairedButton"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="20dp"
+        android:layout_height="50dp"
+        android:background="@drawable/button_bg"
+        app:layout_constraintTop_toBottomOf="@id/btSearchButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/btSearchButton"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
+        android:layout_margin="10dp"
+        android:text="Show paired Bluetooth Devices"
+        android:textAllCaps="false"/>
+
+    <ListView
+        android:id="@+id/pairedDevicesReceyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_margin="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/btPairedButton"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
